# notebooks

./: 03-classification.ipynb  07-neural-networks.ipynb  README.md
capstone_v1/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  GITHUB_PAGES_QUICK_START.md  GITHUB_PAGES_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_IMPLEMENTATION_SUMMARY.md  PRODUCTION_INTEGRATION_COMPLETE.md  PYPI_PUBLISHING.md  README.md  SETUP_GITHUB_PAGES.md  cleanup-disk-space.sh  pyproject.toml  pytest.ini  requirements.txt
capstone_v1 copy/: .gitignore  CONTRIBUTING.md  Makefile  pyproject.toml  requirements.txt
capstone_v1 copy/.github/workflows/: ci.yml  lint.yml  publish.yml  security.yml
capstone_v1 copy/api_wrapper/: FEATURES.md  __init__.py  examples.py  exceptions.py  health.py  huggingface_client.py  metrics.py  rate_limiter.py  settings.py
capstone_v1 copy/docs/: PRODUCTION.md  TROUBLESHOOTING.md  index.md
capstone_v1 copy/examples/: graph.py
capstone_v1 copy/misc_markdown/: GITHUB_PAGES_SETUP_COMPLETE.md  SETUP_GITHUB_PAGES.md
capstone_v1 copy/tests/: __init__.py
capstone_v1/.github/workflows/: deploy-gh-pages.yml  gh-pages-schedule-config.md  publish.yml  test.yml
capstone_v1/api_wrapper/: FEATURES.md  README.md  __init__.py  __main__.py  cache.py  chatbot_wrapper.py  config.py  dataset_loaders.py  examples.py  health.py  huggingface_client.py  logger.py  metrics.py  openai_client.py  pool.py  rate_limiter.py  retry.py  security.py  settings.py
capstone_v1/docs/: 404.html  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  PRODUCTION.md  QUICK_START.md  README.md  SECURITY.md  STARTUP_GUIDE.md  TROUBLESHOOTING.md  _config.yml  api-endpoints.md  api-reference.md  chatbot-interface.html  examples.md  getting-started.md  index.md
capstone_v1/docs/_layouts/: default.html
capstone_v1/examples/: metrics_health_example.py
capstone_v1/misc_markdown/: PRODUCTION_GAPS_ANALYSIS.md  RESEARCH_EXPANSION_PLAN.md
capstone_v1/models/: README.md  __init__.py  example_usage.py  models_registry.json  models_registry.py
capstone_v1/scripts/: deploy-gh-pages.sh  list-models.py
capstone_v1/tests/: conftest.py  test_chatbot_wrapper.py  test_models_registry.py
nbs/: 01-introduction.ipynb  02-regression.ipynb  05-clustering.ipynb  06-dimensionality-reduction.ipynb  07-neural-networks.ipynb
